footer spacing fixes

--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -3,9 +3,11 @@
   border-top: 2px solid black;
   padding-top: 5px;
   margin-top: 60px;
-  display: flex;
-  justify-content: space-between;
+  span {
+    position: absolute;
+  }
   .contact-info {
     text-align: right;
+    width: 100%;
   }
 }
